syntax = "proto3";

package rbc;

// Tùy chọn để trình biên dịch Go biết nơi đặt file đã tạo
option go_package = "./mtn_proto";

// Enum để xác định loại thông điệp
enum MessageType {
  INIT = 0;
  ECHO = 1;
  READY = 2;
}

// Cấu trúc thông điệp RBC
message RBCMessage {
  MessageType type = 1;
  // ID của node khởi tạo broadcast này
  int32 original_sender_id = 2;
  // ID duy nhất cho mỗi lần broadcast để phân biệt các lần gửi khác nhau
  string message_id = 3;
  // Dữ liệu thực tế đang được gửi đi
  bytes payload = 4;
  // ID của node gửi thông điệp mạng này (quan trọng để theo dõi ai đã gửi ECHO/READY)
  int32 network_sender_id = 5;
}


message Header {
    string Command = 1;
    bytes Pubkey = 2;
    bytes ToAddress = 3;
    bytes Sign = 4;
    string Version = 5;
    string ID = 6;
}

message Message {
    Header Header = 1;
    bytes Body = 2;
}
